# qa-web

./: .env  .gitignore  Dockerfile  README.md  config.py  conftest.py  docker-compose.yml  locators.py  pyproject.toml  wait-for-it.sh
enums/: admin_navigation.py
page_components/: __init__.py  button.py  component.py  image.py  input.py  link.py  title.py
page_components/complex_components/: admin_add_customer.py  admin_add_product.py  admin_navigation.py  navbar.py  product_cart.py  shopping_cart.py
page_components/page_interface/: page_interface.py
pages/: admin_dashboard_page.py  base_page.py  category_page.py  main_page.py  product_page.py  registration_page.py
pages/administration_pages/: admin_customer_page.py  admin_login_page.py  admin_products_page.py
src/enums/: add_product_tabs.py
src/page_components/: button.py  component.py  image.py  input.py  link.py
src/page_components/complex_components/: admin_add_customer.py  admin_add_product.py  admin_navigation.py  navbar.py  product_cart.py  shopping_cart.py
src/page_components/page_interface/: page_interface.py
src/pages/: base_page.py  category_page.py  main_page.py  product_page.py  registration_page.py
src/pages/administration_pages/: admin_customer_page.py  admin_dashboard_page.py  admin_login_page.py  admin_products_page.py
src/users/: users.py
tests/: conftest.py  test_admin.py  test_elements_present.py  test_scenario.py
utils/: fake_data.py
